feat: finish api go
