# api/internal/dto/dto.go
@@ -15,3 +15,7 @@ type GetJwtInput struct {
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
