# api/internal/infra/webserver/handlers/product_handler.go
@@ -22,6 +22,18 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// CreateProduct godoc
+// @Summary Create Product
+// @Description Create Product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param request body dto.CreateProductInput true "product request"
+// @Success 201
+// @Failure 400 {object} Error
+// @Failure 500 {object} Error
+// @Router /products [post]
+// @Security ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var productDto dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&productDto)
@@ -42,6 +54,21 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// GetProduct godoc
+// @Summary Get Product
+// @Description Get Product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param  page query string false "page number"
+// @Param  limit query string false "limit number"
+// @Param  sort query string false "sort by"
+// @Success 200 {array} entity.Product
+// @Failure 404 {object} Error
+// @Failure 400 {object} Error
+// @Failure 500 {object} Error
+// @Router /products [get]
+// @Security ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
